hotfix: update naming system

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Aplikasi CRUD</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Jost:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Stack+Sans+Headline:wght@200..700&display=swap" rel="stylesheet">
-    <style>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Jost:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Stack+Sans+Headline:wght@200..700&display=swap" rel="stylesheet">
+   <style>
 
         
         :root {
@@ -18,7 +18,7 @@
         }
 
         body {
-            font-family: "Dela Gothic One", "Segoe UI", sans-serif;
+            font-family: "Jost", "Segoe UI", sans-serif;
             background-color: var(--bg-light);
             color: var(--text-dark);
             margin: 0;
@@ -120,7 +120,7 @@
         </main>
 
         <footer>
-            &copy; {{ current_year if current_year else '2025' }} Aplikasi CRUD by Kamu 💻
+            &copy; {{ current_year if current_year else '2025' }} Aplikasi CRUD by Calvin Samuel Simbolon - A11.2023.14880 💻
         </footer>
     </div>
 </body>
